--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "TODO",
+  "name": "@pagopa/fp-ts-kafkajs",
   "version": "0.0.1",
-  "description": "TODO",
-  "repository": "https://github.com/pagopa/TODO",
+  "description": "fp-ts-kafkajs",
+  "repository": "https://github.com/pagopa/fp-ts-kafkajs",
   "author": "https://pagopa.gov.it",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
+    "preversion": "auto-changelog  --config .auto-changelog.json --unreleased --commit-limit false --stdout --template preview.hbs",
+    "version": "auto-changelog -p --config .auto-changelog.json --unreleased && git add CHANGELOG.md",
     "postversion": "git push && git push --tags",
     "test": "jest",
-    "lint": "tslint --project ."
+    "lint": "eslint . -c .eslintrc.js --ext .ts,.tsx --cache",
+    "typedoc": "typedoc --out docs/ --exclude '**/__tests__/*' --theme minimal src",
+    "docs": "rimraf docs && npm run typedoc && touch docs/.nojekyll"
   },
   "devDependencies": {
+    "@pagopa/danger-custom-rules": "^2.0.3",
+    "@pagopa/eslint-config": "^1.3.1",
     "@types/jest": "^25.2.1",
+    "@types/kafkajs": "^1.9.0",
+    "@types/node": "^14.16.0",
+    "auto-changelog": "^2.3.0",
+    "danger": "^10.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^25.2.7",
+    "patch-package": "^6.4.7",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.2",
     "ts-jest": "^25.3.1",
-    "@types/node": "10.14.1",
-    "danger": "^8.0.0",
-    "danger-plugin-digitalcitizenship": "*",
-    "italia-tslint-rules": "*",
-    "prettier": "^1.12.1",
     "tslint": "^5.1.0",
-    "typescript": "^3.9.0"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "fp-ts": "1.17.4",
-    "io-ts": "1.8.5"
+    "fp-ts": "^2.10.5",
+    "io-ts": "^2.2.16",
+    "kafkajs": "^1.15.0",
+    "typedoc": "^0.20.36"
   }
 }
