--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@pagopa/ts-commons": "^10.5.1",
     "fp-ts": "^2.10.5",
     "io-ts": "^2.2.16",
     "kafkajs": "^1.15.0",
